[fix] basic functions have been perfected